<resources>
    <string name="app_name">PFIMiniProjectGroup226A</string>
    <string name="ID">ID</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ASS">Dont have an account? Register here</string>
    <string name="table">table 1</string>
    <string name="table5">Table 5</string>
    <string name="table4">Table 4</string>
    <string name="table3">Table 3</string>
    <string name="table2">Table 2</string>
    <string name="table1">Table 1</string>
    <string name="logout">Log out</string>
    <string name="Skip">Skip</string>
    <string name="Drinks">Drinks</string>
    <string name="Food">Food</string>
    <string name="Person1">Person 1</string>
    <string name="Person">Person 1</string>
    <string name="Person2">Person 2</string>
    <string name="Person3">Person 3</string>
    <string name="Person4">Person 4</string>
    <string name="Person5">Person 5</string>
    <string name="Next">Next</string>
    <string name="Additionalcomments">Additional comments</string>
    <string name="add">Add</string>
</resources>
