<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lynge.pfiminiprojectgroup226a.MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="141dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/picture"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.00999999" />

    <Button
        android:id="@+id/button6"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="skip"
        android:text="@string/Next"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        tools:text="Next" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Drinks"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintVertical_bias="0.137" />

    <Spinner
        android:id="@+id/DrinkTypeSpinner"
        android:layout_width="184dp"
        android:layout_height="46dp"
        android:spinnerMode="dropdown"
        android:transitionGroup="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <Spinner
        android:id="@+id/DrinkSizeSpinner"
        android:layout_width="184dp"
        android:layout_height="46dp"
        android:spinnerMode="dropdown"
        android:transitionGroup="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="246dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:srcCompat="@drawable/cocacola_glass" />

    <Button
        android:id="@+id/button5"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="skip"
        android:text="@string/Skip"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        tools:text="Skip"
        app:layout_constraintHorizontal_bias="0.267" />

    <EditText
        android:id="@+id/CommentDrinks"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="370dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Commenttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comments"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="352dp" />


</android.support.constraint.ConstraintLayout>


